Set the GC to use.